[package]
name          = "rust_xpath"
version       = "0.1.0"
authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
description   = "A Rust XML XPath library"
readme        = "README.md"
keywords      = ["xml", "xpath"]
repository    = "https://github.com/Centril/rust_xpath"
#documentation = "https://docs.rs/rust_xpath/"

[dependencies]
nom         = "3.2.0"
phf         = "0.7.21"
phf_macros  = "0.7.21"
quick-error = "1.2.0"
unreachable = "1.0.0"
itertools   = "0.6.2"

[dev-dependencies]
quickcheck        = "0.4"
quickcheck_macros = "0.4"