[package]
name          = "rust_xpath"
version       = "0.1.0"
authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
description   = "A Rust XML XPath library"
readme        = "README.md"
keywords      = ["xml", "xpath"]
repository    = "https://github.com/Centril/rust_xpath"
#documentation = "https://docs.rs/rust_xpath/"

[dependencies]
nom         = "3.2.0"  # For lexer.
quick-error = "1.2.1"  # Used in lexer + parser.
unreachable = "1.0.0"  # For lexer.
itertools   = "0.6.2"  # Used in various places.
arrayvec    = "0.4.1"  # Used in lexer_abbr.
arraydeque  = "0.2.3"  # Used in lexer_abbr
cfg-if      = "0.1.2"  # Used in lib.rs

[dev-dependencies]
proptest          = "0.3.0"